--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <meta property="og:url" content="http://www.jfbritto.com.br/" />
         <meta property="type" content="website" />
         <meta property="og:title" content="ELIAS BRITTO">
-        <meta property="og:description" content="Chega mais">
-        <meta property="og:image" content="assets/img/profile-pic.jpeg">
+        <meta property="og:description" content="Nº 15.000">
+        <meta property="og:image" content="assets/img/profile-pic.png">
         <meta property="og:locale" content="pt_BR">
-        <meta property="og:image:type" content="jpeg">
+        <meta property="og:image:type" content="png">
         <meta property="og:image:width" content="640">
         <meta property="og:image:height" content="480">
 
@@ -66,11 +66,11 @@
                     <p class="lead mb-5 text-justify">Nascido em Jerônimo Monteiro no ano de 1964, filho de Joana e Nalziro Britto, vivi minha infância em alguns lugares diferentes, como a fazenda xxxxxx, sempre com muita alegria ao lado de meus irmãos!<br>
                         Já passei por muitos momentos em minha vida, felizes e outros tristes, porém sempre priorizando minha família e meu Deus.<br>
                         Sou atualmente vereador da nossa querida cidade de Jerônimo Monteiro, e resolvi lhes mostrar um pouco do que temos feito em nossa caminhada nos últimos meses!</p>
-                    <!-- <div class="social-icons">
+                    <div class="social-icons">
                         <a class="social-icon" target="_blank" href="https://api.whatsapp.com/send?phone=5528992522719&text=Olá, Elias!"><i class="fab fa-whatsapp"></i></a>
                         <a class="social-icon" target="_blank" href="https://www.facebook.com/elias.britto.7587"><i class="fab fa-facebook-f"></i></a>
                         <a class="social-icon" target="_blank" href="https://www.instagram.com/eliaslbritto/"><i class="fab fa-instagram"></i></a>
-                    </div> -->
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
