--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>ELIAS BRITTO 15.000</title>
         <link rel="icon" type="image/x-icon" href="assets/img/user.png" />
 
-        <meta property="og:url" content="http://www.jfbritto.com.br/" />
+        <meta property="og:url" content="https://eliasbritto.ondeestou.app/" />
         <meta property="type" content="website" />
         <meta property="og:title" content="ELIAS BRITTO">
         <meta property="og:description" content="Nº 15.000">
