--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <meta property="type" content="website" />
         <meta property="og:title" content="ELIAS BRITTO">
         <meta property="og:description" content="Nº 15.000">
-        <meta property="og:image" content="assets/img/profile-pic.png">
+        <meta property="og:image" content="assets/img/profile-pic.jpg">
         <meta property="og:locale" content="pt_BR">
-        <meta property="og:image:type" content="png">
+        <meta property="og:image:type" content="jpg">
         <meta property="og:image:width" content="640">
         <meta property="og:image:height" content="480">
 
