--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
 
-                            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                            <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
                                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -90,12 +90,24 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                     <img src="/assets/carrossel/caminhada/1/caminhada_1_1.jpg" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5 class="text-light">Second slide label</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    </div>
                                     </div>
                                     <div class="carousel-item">
                                     <img src="/assets/carrossel/caminhada/1/caminhada_1_2.jpg" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5 class="text-light">Second slide label</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    </div>
                                     </div>
                                     <div class="carousel-item">
                                     <img src="/assets/carrossel/caminhada/1/caminhada_1_3.jpg" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5 class="text-light">Second slide label</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    </div>
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -120,7 +132,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
 
-                            <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel">
+                            <div id="carouselExampleIndicators2" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
                                     <li data-target="#carouselExampleIndicators2" data-slide-to="0" class="active"></li>
                                     <li data-target="#carouselExampleIndicators2" data-slide-to="1"></li>
@@ -129,12 +141,24 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                     <img src="/assets/carrossel/saude/1/saude_1_1.jpg" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5 class="text-light">Second slide label</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    </div>
                                     </div>
                                     <div class="carousel-item">
                                     <img src="/assets/carrossel/saude/1/saude_1_2.jpg" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5 class="text-light">Second slide label</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    </div>
                                     </div>
                                     <div class="carousel-item">
                                     <img src="/assets/carrossel/saude/1/saude_1_3.jpg" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5 class="text-light">Second slide label</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    </div>
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-slide="prev">
@@ -159,7 +183,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
 
-                            <div id="carouselExampleIndicators3" class="carousel slide" data-ride="carousel">
+                            <div id="carouselExampleIndicators3" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
                                     <li data-target="#carouselExampleIndicators3" data-slide-to="0" class="active"></li>
                                     <li data-target="#carouselExampleIndicators3" data-slide-to="1"></li>
@@ -168,12 +192,24 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                     <img src="/assets/carrossel/esporte/1/esporte_1_1.jpg" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5 class="text-light">Second slide label</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    </div>
                                     </div>
                                     <div class="carousel-item">
                                     <img src="/assets/carrossel/esporte/1/esporte_1_2.jpg" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5 class="text-light">Second slide label</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    </div>
                                     </div>
                                     <div class="carousel-item">
                                     <img src="/assets/carrossel/esporte/1/esporte_1_3.jpg" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5 class="text-light">Second slide label</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    </div>
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carouselExampleIndicators3" role="button" data-slide="prev">
@@ -198,7 +234,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
 
-                            <div id="carouselExampleIndicators4" class="carousel slide" data-ride="carousel">
+                            <div id="carouselExampleIndicators4" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
                                     <li data-target="#carouselExampleIndicators4" data-slide-to="0" class="active"></li>
                                     <li data-target="#carouselExampleIndicators4" data-slide-to="1"></li>
@@ -207,12 +243,24 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                     <img src="/assets/carrossel/infra/1/infra_1_1.jpg" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5 class="text-light">Second slide label</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    </div>
                                     </div>
                                     <div class="carousel-item">
                                     <img src="/assets/carrossel/infra/1/infra_1_2.jpg" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5 class="text-light">Second slide label</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    </div>
                                     </div>
                                     <div class="carousel-item">
                                     <img src="/assets/carrossel/infra/1/infra_1_3.jpg" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5 class="text-light">Second slide label</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    </div>
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carouselExampleIndicators4" role="button" data-slide="prev">
@@ -237,7 +285,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
 
-                            <div id="carouselExampleIndicators5" class="carousel slide" data-ride="carousel">
+                            <div id="carouselExampleIndicators5" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
                                     <li data-target="#carouselExampleIndicators5" data-slide-to="0" class="active"></li>
                                     <li data-target="#carouselExampleIndicators5" data-slide-to="1"></li>
@@ -246,12 +294,24 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                     <img src="/assets/carrossel/agricultura/1/agricultura_1_1.jpg" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5 class="text-light">Second slide label</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    </div>
                                     </div>
                                     <div class="carousel-item">
                                     <img src="/assets/carrossel/agricultura/1/agricultura_1_2.jpg" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5 class="text-light">Second slide label</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    </div>
                                     </div>
                                     <div class="carousel-item">
                                     <img src="/assets/carrossel/agricultura/1/agricultura_1_3.jpg" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5 class="text-light">Second slide label</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    </div>
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carouselExampleIndicators5" role="button" data-slide="prev">
@@ -275,7 +335,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
 
-                            <div id="carouselExampleIndicators6" class="carousel slide" data-ride="carousel">
+                            <div id="carouselExampleIndicators6" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
                                     <li data-target="#carouselExampleIndicators6" data-slide-to="0" class="active"></li>
                                     <li data-target="#carouselExampleIndicators6" data-slide-to="1"></li>
@@ -284,12 +344,24 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                     <img src="/assets/carrossel/obra/1/obra_1_1.jpg" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5 class="text-light">Second slide label</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    </div>
                                     </div>
                                     <div class="carousel-item">
                                     <img src="/assets/carrossel/obra/1/obra_1_2.jpg" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5 class="text-light">Second slide label</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    </div>
                                     </div>
                                     <div class="carousel-item">
                                     <img src="/assets/carrossel/obra/1/obra_1_3.jpg" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5 class="text-light">Second slide label</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    </div>
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carouselExampleIndicators6" role="button" data-slide="prev">
