--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         JERÔNIMO MONTEIRO - ES
                         <!-- <a class="text-success" href="mailto:jf.britto@hotmail.com">jf.britto@hotmail.com</a> -->
                     </div>
-                    <p class="lead mb-5 text-justify">Nascido em Jerônimo Monteiro no ano de 1964, filho de Joana e Nalziro Britto, vivi minha infância em alguns lugares diferentes, como a fazenda xxxxxx, sempre com muita alegria ao lado de meus irmãos!<br>
+                    <p class="lead mb-5 text-justify">Nascido em Jerônimo Monteiro no ano de 1964, filho de Joana e Nalziro Britto, vivi minha infância em alguns lugares diferentes, como a Fazenda São Manoel onde passei boa parte da minha infância, sempre com muita alegria ao lado de meus irmãos!<br>
                         Já passei por muitos momentos em minha vida, felizes e outros tristes, porém sempre priorizando minha família e meu Deus.<br>
                         Sou atualmente vereador da nossa querida cidade de Jerônimo Monteiro, e resolvi lhes mostrar um pouco do que temos feito em nossa caminhada nos últimos meses!</p>
                     <div class="social-icons">
