--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
 
-                            <p>Sempre acompanhamos os amigos do campo</p>
+                            <p>Sempre acompanhamos o desenvolvimento das comunidades de nossa cidade, uma delas é o Panamá, grande produtora de café e dona de paisagens exuberantes!</p>
 
                             <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
@@ -131,7 +131,8 @@
                                 </a>
                             </div>
 
-                            <p>Sempre acompanhamos os amigos do campo</p>
+                            <br>
+                            <p>Outra comunidade que tenho o prazer de dar suporte e acompanhar é a de Santa Maria, onde ali existem grandes produtores de eucalipto e gado leiteiro!</p>
 
                             <div id="carouselExampleIndicatorsb" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
@@ -183,48 +184,8 @@
                                     <span class="sr-only">Next</span>
                                 </a>
                             </div>
-
-                            <p>Sempre acompanhamos os amigos do campo</p>
-
-                            <div id="carouselExampleIndicatorsc" class="carousel slide carousel-fade" data-ride="carousel">
-                                <ol class="carousel-indicators">
-                                    <li data-target="#carouselExampleIndicatorsc" data-slide-to="0" class="active"></li>
-                                    <li data-target="#carouselExampleIndicatorsc" data-slide-to="1"></li>
-                                    <li data-target="#carouselExampleIndicatorsc" data-slide-to="2"></li>
-                                    <li data-target="#carouselExampleIndicatorsc" data-slide-to="3"></li>
-                                    <li data-target="#carouselExampleIndicatorsc" data-slide-to="4"></li>
-                                    <li data-target="#carouselExampleIndicatorsc" data-slide-to="5"></li>
-                                </ol>
-                                <div class="carousel-inner">
-                                    <div class="carousel-item active">
-                                        <img src="/assets/carrossel/caminhada/3/1.jpg" class="d-block w-100" alt="...">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="/assets/carrossel/caminhada/3/2.jpg" class="d-block w-100" alt="...">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="/assets/carrossel/caminhada/3/3.jpg" class="d-block w-100" alt="...">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="/assets/carrossel/caminhada/3/4.jpg" class="d-block w-100" alt="...">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="/assets/carrossel/caminhada/3/5.jpg" class="d-block w-100" alt="...">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="/assets/carrossel/caminhada/3/6.jpg" class="d-block w-100" alt="...">
-                                    </div>
-                                </div>
-                                <a class="carousel-control-prev" href="#carouselExampleIndicatorsc" role="button" data-slide="prev">
-                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                    <span class="sr-only">Previous</span>
-                                </a>
-                                <a class="carousel-control-next" href="#carouselExampleIndicatorsc" role="button" data-slide="next">
-                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                    <span class="sr-only">Next</span>
-                                </a>
-                            </div>
-                        
+                            
+                            <br>
                             <p>Sempre acompanhamos os amigos do campo</p>
 
                             <div id="carouselExampleIndicatorsd" class="carousel slide carousel-fade" data-ride="carousel">
@@ -392,7 +353,6 @@
                                     <li data-target="#carouselExampleIndicators4" data-slide-to="1"></li>
                                     <li data-target="#carouselExampleIndicators4" data-slide-to="2"></li>
                                     <li data-target="#carouselExampleIndicators4" data-slide-to="3"></li>
-                                    <li data-target="#carouselExampleIndicators4" data-slide-to="4"></li>
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
@@ -406,9 +366,6 @@
                                     </div>
                                     <div class="carousel-item">
                                         <img src="/assets/carrossel/infra/1/4.jpg" class="d-block w-100" alt="...">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="/assets/carrossel/infra/1/5.jpg" class="d-block w-100" alt="...">
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carouselExampleIndicators4" role="button" data-slide="prev">
