--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                         JERÔNIMO MONTEIRO - ES
                         <!-- <a class="text-success" href="mailto:jf.britto@hotmail.com">jf.britto@hotmail.com</a> -->
                     </div>
-                    <p class="lead mb-5 text-justify">Nascido em Jerônimo Monteiro no ano de 1964, filho de Joana e Nalziro Britto, vivi minha infância em alguns lugares diferentes, boa parte dela foi no Bairro Vila Britto onde com muita alegria estive ao lado de meus pais e irmãos!<br>
+                    <p class="lead mb-5 text-justify">Nascido em Jerônimo Monteiro no ano de 1964, filho de Joana e Nalziro Britto, vivi minha infância e cresci no Bairro Vila Britto onde com muita alegria estive ao lado de meus pais e irmãos!<br>
                         Já passei por muitos momentos em minha vida, felizes e outros tristes, porém sempre priorizando minha família e meu Deus.<br>
-                        Sou atualmente vereador da nossa querida cidade de Jerônimo Monteiro, e resolvi lhes mostrar um pouco do que temos feito em nossa caminhada nos últimos anos!</p>
+                        Sou atualmente vereador da nossa querida cidade de Jerônimo Monteiro, e resolvi lhes mostrar um pouco do que temos feito em nossa caminhada de trabalho nos últimos anos!</p>
                     <div class="social-icons">
                         <a class="social-icon" target="_blank" href="https://api.whatsapp.com/send?phone=5528992522719&text=Olá, Elias!"><i class="fab fa-whatsapp"></i></a>
                         <a class="social-icon" target="_blank" href="https://www.facebook.com/elias.britto.7587"><i class="fab fa-facebook-f"></i></a>
