--- a/index.html
+++ b/index.html
@@ -56,11 +56,10 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        ELIAS
-                        <span class="text-success">BRITTO</span>
+                        <span class="text-success">ELIAS BRITTO</span>
                         15.000
                     </h1>
-                    <div class="subheading mb-5">
+                    <div class="subheading mb-5 text-success">
                         JERÔNIMO MONTEIRO - ES
                         <!-- <a class="text-success" href="mailto:jf.britto@hotmail.com">jf.britto@hotmail.com</a> -->
                     </div>
