--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
         <title>ELIAS BRITTO 15.000</title>
         <link rel="icon" type="image/x-icon" href="assets/img/user.png" />
 
-        <meta property="og:url" content="https://eliasbritto.ondeestou.app/" />
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <meta name=”keywords” content="elias, britto, elias britto, vereador elias" />
+        <!-- <meta property="og:url" content="http://medsono.jfbritto.com.br/" /> -->
         <meta property="type" content="website" />
-        <meta property="og:title" content="ELIAS BRITTO">
-        <meta property="og:description" content="Nº 15.000">
-        <meta property="og:image" content="assets/img/profile-pic.jpg">
+        <meta property="og:title" content="ELIAS BRITTO Nº 15.000">
+        <meta property="og:description" content="Conheça sua história e caminhada">
+        <meta property="og:image" content="/assets/img/profile-pic.jpg">
         <meta property="og:locale" content="pt_BR">
         <meta property="og:image:type" content="jpg">
         <meta property="og:image:width" content="640">
@@ -81,6 +84,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
 
+                            <h3 class="mt-4">Panamá</h3>
                             <p>Sempre acompanhamos o desenvolvimento das comunidades de nossa cidade, uma delas é o Panamá, grande produtora de café e dona de paisagens exuberantes!</p>
 
                             <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
@@ -131,6 +135,7 @@
                             </div>
 
                             <br>
+                            <h3 class="mt-4">Santa Maria</h3>
                             <p>Outra comunidade que tenho o prazer de dar suporte e acompanhar é a de Santa Maria, onde ali existem grandes produtores de eucalipto e gado leiteiro!</p>
 
                             <div id="carouselExampleIndicatorsb" class="carousel slide carousel-fade" data-ride="carousel">
@@ -185,7 +190,8 @@
                             </div>
                             
                             <br>
-                            <p>Sempre acompanhamos os amigos do campo</p>
+                            <h3 class="mt-4">Brasília</h3>
+                            <p>Por diversos anos tenho o orgulho de pessoalmente ir à Brasilia em busca de recursos para nossa cidade. Sempre fomos recebidos de braços abertos por nossos parceiros e amigos de caminhada!</p>
 
                             <div id="carouselExampleIndicatorsd" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
@@ -246,7 +252,8 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
 
-                            <p>Sempre acompanhamos a saude</p>
+                            <h3 class="mt-4">Ambulâncias e carros</h3>
+                            <p>Tivemos o prazer de trazer para nossa cidade, vans, ambulâncias e carros com a ajuda de nossos amigos deputados e governadores!</p>
 
                             <div id="carouselExampleIndicators2" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
@@ -295,7 +302,8 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
 
-                            <p>Sempre acompanhamos a social</p>
+                            <h3 class="mt-4">o que faz um vereador?</h3>
+                            <p>Tivemos o prazer de passar uma tarde com nossas crianças, tirando suas duvidas e explicando um pouco do trabalho que o vereador exerce no município!</p>
 
                             <div id="carouselExampleIndicators3" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
@@ -344,7 +352,8 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
 
-                            <p>Sempre acompanhamos a infra</p>
+                            <h3 class="mt-4">sítio dos crioulos</h3>
+                            <p>Comunidade que estou sempre acompanhando, tivemos o prazer em auxiliar seu anseio por uma estrada em meio a lavoura.</p>
 
                             <div id="carouselExampleIndicators4" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
@@ -377,7 +386,8 @@
                                 </a>
                             </div>
 
-                            <p>Sempre acompanhamos a infra</p>
+                            <h3 class="mt-4">João Calasãns</h3>
+                            <p>No bairro Vila Cruzeiro próximo ao quiosque do Sr. Denilson (Puaia). Uma solicitação nossa ao prefeito, a pedido da comunidade que há muitos anos esperava pelo término do calçamento.</p>
 
                             <div id="carouselExampleIndicators4b" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
@@ -406,7 +416,8 @@
                                 </a>
                             </div>
 
-                            <p>Sempre acompanhamos a infra</p>
+                            <h3 class="mt-4">Bairro Capixaba</h3>
+                            <p>Solicitamos ao prefeito e à secretaria de competência em nome da comunidade, um novo boeiro e o alargamento da estrada naquele local. Estivemos acompanhando o período das obras até o término dela, o que foi muito bem executada pelo secretário e os demais funcionários com competência e zelo.</p>
 
                             <div id="carouselExampleIndicators4c" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
@@ -442,8 +453,9 @@
                                     <span class="sr-only">Next</span>
                                 </a>
                             </div>
-
-                            <p>Sempre acompanhamos a infra</p>
+                            
+                            <h3 class="mt-4">Chácara Lanes</h3>
+                            <p>Estivemos acompanhando a execução do trabalho do SAAE em levar a extensão da rede de água potável até o final do bairro Chácara Lanes ao lado da BR 482. Somos gratos ao prefeito Sérgio Fonseca por atender à nossa solicitação, que tem beneficiado a todos daquele bairro que há muitos anos esperavam por essa obra.</p>
 
                             <div id="carouselExampleIndicators4d" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
@@ -484,7 +496,10 @@
                                 </a>
                             </div>
 
-                            <p>Sempre acompanhamos a infra</p>
+                            <h3 class="mt-4">Sertão, gironda e rancharia</h3>
+                            <p>Conseguimos junto com o prefeito Sérgio Fonseca, 4 pontes de cimento para atender algumas comunidades do nosso interior, onde todas as aguardavam há mais de 20 anos. 
+                                Duas delas foram para atender a comunidade do Sertão, essas intermediadas junto ao governo do Estado pelos deputados estaduais Pr. Marcos Mansur e Marcelo Santos; uma para Gironda através do Dep. Marcelo Santos e a de Rancharia pelo Dep. Marcos Mansur. 
+                                Agradecemos aos Deputados e a todos que juntamente conosco se empenharam para atender à essas comunidades que há anos buscavam por essas benfeitorias.</p>
 
                             <div id="carouselExampleIndicators4e" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
@@ -521,7 +536,8 @@
                                 </a>
                             </div>
 
-                            <p>Sempre acompanhamos a infra</p>
+                            <h3 class="mt-4">Santo Amaro</h3>
+                            <p>Solicitamos e acompanhamos todo o trabalho de reforma da ponte da comunidade de Santo Amaro.</p>
 
                             <div id="carouselExampleIndicators4f" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
@@ -567,7 +583,8 @@
                                 </a>
                             </div>
 
-                            <p>Sempre acompanhamos a infra</p>
+                            <h3 class="mt-4">Boa União</h3>
+                            <p>Estivemos sempre acompanhando os trabalhos da instalação da estação para tratamento do esgoto do bairro Boa União (na entrada do sítio dos Crioulos).</p>
 
                             <div id="carouselExampleIndicators4h" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
@@ -624,7 +641,8 @@
                                 </a>
                             </div>
 
-                            <p>Sempre acompanhamos a infra</p>
+                            <h3 class="mt-4">Morro do cruzeiro (Cristo)</h3>
+                            <p>Solicitamos e coordenamos a limpeza da estrada de acesso ao morro do Cruzeiro (Cristo), ponto turístico querido de nossa cidade.</p>
 
                             <div id="carouselExampleIndicators4g" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
@@ -673,7 +691,8 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
 
-                            <p>Sempre acompanhamos a agricultura</p>
+                            <h3 class="mt-4">Estradas rurais</h3>
+                            <p>Estivemos sempre solicitando e acompanhando diversas obras de limpeza e abertura de estradas que dão acesso às nossas comunidades rurais.</p>
 
                             <div id="carouselExampleIndicators5" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
@@ -694,7 +713,8 @@
                                 </a>
                             </div>
 
-                            <p>Sempre acompanhamos a agricultura</p>
+                            <h3 class="mt-4">Café Providência</h3>
+                            <p>Sempre acompanhando à comunidade de Providência, tive o prazer por diversas vezes de estar na fábrica do Café Providência de propriedade dos senhores Adriano Silva, Maria Enizete Silva, Estevão Mauri e Areni Mauri, café de muita qualidade de nossas montanhas e que faz parte da agricultura familiar desde 2017.</p>
 
                             <div id="carouselExampleIndicators5b" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
@@ -746,7 +766,8 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
 
-                            <p>Sempre acompanhamos a obra</p>
+                            <h3 class="mt-4">antiga estação</h3>
+                            <p>Reforma da antiga estação no centro da cidade, aonde será um espaço cultural como museu, biblioteca entre outros. Recurso este conseguido por Nós através de uma verba com o Ex Deputado Federal Lelo Coimbra, Este que tem constribuído muito com Recursos para o nosso município, obra que foi muito bem executada pelo Prefeito Sérgio Fonseca e sua equipe de gestão!</p>
 
                             <div id="carouselExampleIndicators6" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
@@ -783,7 +804,8 @@
                                 </a>
                             </div>
 
-                            <p>Sempre acompanhamos a obra</p>
+                            <h3 class="mt-4">quadra poliesportiva no bairro Vila Cruzeiro</h3>
+                            <p>Há mais de 20 anos aguardada por aquela comunidade. Tal recurso, em 2017, foi solicitado por mim (Vereador Elias Britto) e acompanhado pelo Prefeito Sérgio Fonseca em Brasília ao Ex-Deputado Federal Lelo Coimbra. Hoje, é uma realidade e nos próximos meses estará concluída.</p>
 
                             <div id="carouselExampleIndicators6b" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
