--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <meta name=”keywords” content="elias, britto, elias britto, vereador elias" />
-        <!-- <meta property="og:url" content="http://medsono.jfbritto.com.br/" /> -->
+        <meta property="og:url" content="https://eliasbritto.ondeestou.app/" />
         <meta property="type" content="website" />
         <meta property="og:title" content="ELIAS BRITTO Nº 15.000">
         <meta property="og:description" content="Conheça sua história e caminhada">
