--- a/index.html
+++ b/index.html
@@ -203,6 +203,12 @@
                                     <li data-target="#carouselExampleIndicatorsd" data-slide-to="5"></li>
                                     <li data-target="#carouselExampleIndicatorsd" data-slide-to="6"></li>
                                     <li data-target="#carouselExampleIndicatorsd" data-slide-to="7"></li>
+                                    <li data-target="#carouselExampleIndicatorsd" data-slide-to="8"></li>
+                                    <li data-target="#carouselExampleIndicatorsd" data-slide-to="9"></li>
+                                    <li data-target="#carouselExampleIndicatorsd" data-slide-to="10"></li>
+                                    <li data-target="#carouselExampleIndicatorsd" data-slide-to="11"></li>
+                                    <li data-target="#carouselExampleIndicatorsd" data-slide-to="12"></li>
+                                    <li data-target="#carouselExampleIndicatorsd" data-slide-to="13"></li>
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
@@ -228,6 +234,24 @@
                                     </div>
                                     <div class="carousel-item">
                                         <img src="/assets/carrossel/caminhada/4/8.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/caminhada/4/9.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/caminhada/4/10.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/caminhada/4/11.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/caminhada/4/12.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/caminhada/4/13.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/caminhada/4/14.jpg" class="d-block w-100" alt="...">
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carouselExampleIndicatorsd" role="button" data-slide="prev">
