--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                         <div class="flex-grow-1">
 
                             <h3 class="mt-4">o que faz um vereador?</h3>
-                            <p>Tivemos o prazer de passar uma tarde com nossas crianças, tirando suas duvidas e explicando um pouco do trabalho que o vereador exerce no município!</p>
+                            <p>Tivemos o prazer de passar uma manhã com nossas crianças, tirando suas duvidas e explicando um pouco do importante trabalho que o vereador exerce no município!</p>
 
                             <div id="carouselExampleIndicators3" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
@@ -878,6 +878,60 @@
                                     </div>
                                     <div class="carousel-item">
                                         <img src="/assets/carrossel/obra/2/11.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselExampleIndicators6b" role="button" data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselExampleIndicators6b" role="button" data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+
+                            <h3 class="mt-4">Calçamento das casas populares</h3>
+                            <p>Importante obra para nosso município, obra essa que foi solicitada por nós e que se tornou realidade atraves dos recursos enviados pelos deputados Lelo Coimbra e Marcelo Santos.</p>
+
+                            <div id="carouselExampleIndicators6b" class="carousel slide carousel-fade" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#carouselExampleIndicators6b" data-slide-to="0" class="active"></li>
+                                    <li data-target="#carouselExampleIndicators6b" data-slide-to="1"></li>
+                                    <li data-target="#carouselExampleIndicators6b" data-slide-to="2"></li>
+                                    <li data-target="#carouselExampleIndicators6b" data-slide-to="3"></li>
+                                    <li data-target="#carouselExampleIndicators6b" data-slide-to="4"></li>
+                                    <li data-target="#carouselExampleIndicators6b" data-slide-to="5"></li>
+                                    <li data-target="#carouselExampleIndicators6b" data-slide-to="6"></li>
+                                    <li data-target="#carouselExampleIndicators6b" data-slide-to="7"></li>
+                                    <li data-target="#carouselExampleIndicators6b" data-slide-to="8"></li>
+                                </ol>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="/assets/carrossel/obra/3/1.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/obra/3/2.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/obra/3/3.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/obra/3/4.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/obra/3/5.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/obra/3/6.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/obra/3/7.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/obra/3/8.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/obra/3/9.jpg" class="d-block w-100" alt="...">
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carouselExampleIndicators6b" role="button" data-slide="prev">
