--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#caminhada">CAMINHADA</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#saude">SAÚDE</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#social">SOCIAL</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#esporte">ESPORTE</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#infra">INFRA ESTRUTURA</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#agricultura">AGRICULTURA</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#obras">OBRAS</a></li>
@@ -103,6 +104,7 @@
                                     <li data-target="#carouselExampleIndicatorsd" data-slide-to="11"></li>
                                     <li data-target="#carouselExampleIndicatorsd" data-slide-to="12"></li>
                                     <li data-target="#carouselExampleIndicatorsd" data-slide-to="13"></li>
+                                    <li data-target="#carouselExampleIndicatorsd" data-slide-to="14"></li>
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
@@ -146,6 +148,9 @@
                                     </div>
                                     <div class="carousel-item">
                                         <img src="/assets/carrossel/caminhada/4/14.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/caminhada/4/15.jpg" class="d-block w-100" alt="...">
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carouselExampleIndicatorsd" role="button" data-slide="prev">
@@ -352,6 +357,83 @@
                                     </div>
                                     <div class="carousel-item">
                                         <img src="/assets/carrossel/social/1/5.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselExampleIndicators3" role="button" data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselExampleIndicators3" role="button" data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                        
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Skills-->
+            <section class="resume-section" id="esporte">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">ESPORTE</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+
+                            <h3 class="mt-4">INCENTIVO</h3>
+                            <p>Sempre fui apaixonado por esportes, principalmente o futebol! Ao longo de minha caminhada sempre fui um incentivador e apoiador dos times da nossa cidade!</p>
+
+                            <div id="carouselExampleIndicators3" class="carousel slide carousel-fade" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#carouselExampleIndicators3" data-slide-to="0" class="active"></li>
+                                    <li data-target="#carouselExampleIndicators3" data-slide-to="1"></li>
+                                    <li data-target="#carouselExampleIndicators3" data-slide-to="2"></li>
+                                    <li data-target="#carouselExampleIndicators3" data-slide-to="3"></li>
+                                    <li data-target="#carouselExampleIndicators3" data-slide-to="4"></li>
+                                    <li data-target="#carouselExampleIndicators3" data-slide-to="5"></li>
+                                    <li data-target="#carouselExampleIndicators3" data-slide-to="6"></li>
+                                    <li data-target="#carouselExampleIndicators3" data-slide-to="7"></li>
+                                    <li data-target="#carouselExampleIndicators3" data-slide-to="8"></li>
+                                    <li data-target="#carouselExampleIndicators3" data-slide-to="9"></li>
+                                    <li data-target="#carouselExampleIndicators3" data-slide-to="10"></li>
+                                    <li data-target="#carouselExampleIndicators3" data-slide-to="11"></li>
+                                </ol>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="/assets/carrossel/esporte/1/1.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/esporte/1/2.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/esporte/1/3.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/esporte/1/4.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/esporte/1/5.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/esporte/1/6.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/esporte/1/7.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/esporte/1/8.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/esporte/1/9.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/esporte/1/10.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/esporte/1/11.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/esporte/1/12.jpg" class="d-block w-100" alt="...">
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carouselExampleIndicators3" role="button" data-slide="prev">
