--- a/index.html
+++ b/index.html
@@ -797,6 +797,9 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
 
+                            <h3 class="mt-4">Veículos</h3>
+                            <p>Com a ajuda de nossos amigos deputados, conseguimos trazer para a agricultura de nosso município diversas máquinas para o auxílio do trato no campo. Também trouxemos carros como uma fiat strada que já está sendo utilizada.</p>
+
                             <h3 class="mt-4">Estradas rurais</h3>
                             <p>Estivemos sempre solicitando e acompanhando diversas obras de limpeza e abertura de estradas que dão acesso às nossas comunidades rurais.</p>
 
@@ -975,17 +978,17 @@
                             <h3 class="mt-4">Calçamento das casas populares</h3>
                             <p>Importante obra para nosso município, obra essa que foi solicitada por nós e que se tornou realidade atraves dos recursos enviados pelos deputados Lelo Coimbra e Marcelo Santos.</p>
 
-                            <div id="carouselExampleIndicators6b" class="carousel slide carousel-fade" data-ride="carousel">
+                            <div id="carouselExampleIndicators6c" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
-                                    <li data-target="#carouselExampleIndicators6b" data-slide-to="0" class="active"></li>
-                                    <li data-target="#carouselExampleIndicators6b" data-slide-to="1"></li>
-                                    <li data-target="#carouselExampleIndicators6b" data-slide-to="2"></li>
-                                    <li data-target="#carouselExampleIndicators6b" data-slide-to="3"></li>
-                                    <li data-target="#carouselExampleIndicators6b" data-slide-to="4"></li>
-                                    <li data-target="#carouselExampleIndicators6b" data-slide-to="5"></li>
-                                    <li data-target="#carouselExampleIndicators6b" data-slide-to="6"></li>
-                                    <li data-target="#carouselExampleIndicators6b" data-slide-to="7"></li>
-                                    <li data-target="#carouselExampleIndicators6b" data-slide-to="8"></li>
+                                    <li data-target="#carouselExampleIndicators6c" data-slide-to="0" class="active"></li>
+                                    <li data-target="#carouselExampleIndicators6c" data-slide-to="1"></li>
+                                    <li data-target="#carouselExampleIndicators6c" data-slide-to="2"></li>
+                                    <li data-target="#carouselExampleIndicators6c" data-slide-to="3"></li>
+                                    <li data-target="#carouselExampleIndicators6c" data-slide-to="4"></li>
+                                    <li data-target="#carouselExampleIndicators6c" data-slide-to="5"></li>
+                                    <li data-target="#carouselExampleIndicators6c" data-slide-to="6"></li>
+                                    <li data-target="#carouselExampleIndicators6c" data-slide-to="7"></li>
+                                    <li data-target="#carouselExampleIndicators6c" data-slide-to="8"></li>
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
@@ -1016,11 +1019,11 @@
                                         <img src="/assets/carrossel/obra/3/9.jpg" class="d-block w-100" alt="...">
                                     </div>
                                 </div>
-                                <a class="carousel-control-prev" href="#carouselExampleIndicators6b" role="button" data-slide="prev">
+                                <a class="carousel-control-prev" href="#carouselExampleIndicators6c" role="button" data-slide="prev">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Previous</span>
                                 </a>
-                                <a class="carousel-control-next" href="#carouselExampleIndicators6b" role="button" data-slide="next">
+                                <a class="carousel-control-next" href="#carouselExampleIndicators6c" role="button" data-slide="next">
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Next</span>
                                 </a>
