--- a/index.html
+++ b/index.html
@@ -331,6 +331,9 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
 
+                            <h3 class="mt-4">Prevenção contra as drogas</h3>
+                            <p>Desde 2014, quando criamos a lei 1517/2014 de prevenção contra as drogas, toda 1 semana de julho separamos um tempo para concientizar nossa população e alunos desse importante tema que tem que ser amplamente discutido!</p>
+
                             <h3 class="mt-4">o que faz um vereador?</h3>
                             <p>Tivemos o prazer de passar uma manhã com nossas crianças, tirando suas duvidas e explicando um pouco do importante trabalho que o vereador exerce no município!</p>
 
