--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
                             </div>
 
                             <h3 class="mt-4">Boa União</h3>
-                            <p>Estivemos sempre acompanhando os trabalhos da instalação da estação para tratamento do esgoto do bairro Boa União (na entrada do sítio dos Crioulos).</p>
+                            <p>Estivemos sempre acompanhando os trabalhos da instalação da estação para tratamento do esgoto do bairro Boa União (na entrada do sítio dos Crioulos). Também para aquela comunidade conseguimos verbas para realizar o calçamento de suas ruas.</p>
 
                             <div id="carouselExampleIndicators4h" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
