--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#saude">SAÚDE</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#social">SOCIAL</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#esporte">ESPORTE</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#turismo">TURISMO</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#infra">INFRA ESTRUTURA</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#agricultura">AGRICULTURA</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#obras">OBRAS</a></li>
@@ -444,6 +445,75 @@
                                     <span class="sr-only">Previous</span>
                                 </a>
                                 <a class="carousel-control-next" href="#carouselExampleIndicators56" role="button" data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                        
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Skills-->
+            <section class="resume-section" id="turismo">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">TURISMO</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+
+                            <h3 class="mt-4">FESTA DE SETEMBRO</h3>
+                            <p>Nos últimos anos, conseguimos por meio do Ministerio do Turismo, na ocasião, tinhamos como ministro adjundo do Ministério do Turismo nosso amigo e ex deputado federal, Lelo Coimbra. Somos muito gratos por tanta atenção e zelo para com nosso município!</p>
+
+                            <div id="carouselExampleIndicatorsTur" class="carousel slide carousel-fade" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#carouselExampleIndicatorsTur" data-slide-to="0" class="active"></li>
+                                    <li data-target="#carouselExampleIndicatorsTur" data-slide-to="1"></li>
+                                    <li data-target="#carouselExampleIndicatorsTur" data-slide-to="2"></li>
+                                    <li data-target="#carouselExampleIndicatorsTur" data-slide-to="3"></li>
+                                    <li data-target="#carouselExampleIndicatorsTur" data-slide-to="4"></li>
+                                    <li data-target="#carouselExampleIndicatorsTur" data-slide-to="5"></li>
+                                    <li data-target="#carouselExampleIndicatorsTur" data-slide-to="6"></li>
+                                    <li data-target="#carouselExampleIndicatorsTur" data-slide-to="7"></li>
+                                    <li data-target="#carouselExampleIndicatorsTur" data-slide-to="8"></li>
+                                    <li data-target="#carouselExampleIndicatorsTur" data-slide-to="9"></li>
+                                </ol>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="/assets/carrossel/turismo/1/1.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/turismo/1/2.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/turismo/1/3.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/turismo/1/4.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/turismo/1/5.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/turismo/1/6.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/turismo/1/7.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/turismo/1/8.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/turismo/1/9.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/assets/carrossel/turismo/1/10.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselExampleIndicatorsTur" role="button" data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselExampleIndicatorsTur" role="button" data-slide="next">
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Next</span>
                                 </a>
