--- a/index.html
+++ b/index.html
@@ -60,13 +60,15 @@
             <!-- About-->
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
-                    <h1 class="mb-0">
-                        <span class="text-success">ELIAS BRITTO</span>
-                        15.000
-                    </h1>
-                    <div class="subheading mb-5 text-success">
-                        JERÔNIMO MONTEIRO - ES
-                        <!-- <a class="text-success" href="mailto:jf.britto@hotmail.com">jf.britto@hotmail.com</a> -->
+                    <div class="cel">
+                        <h1 class="mb-0">
+                            <span class="text-success">ELIAS BRITTO</span>
+                            15.000
+                        </h1>
+                        <div class="subheading mb-5 text-success">
+                            JERÔNIMO MONTEIRO - ES
+                            <!-- <a class="text-success" href="mailto:jf.britto@hotmail.com">jf.britto@hotmail.com</a> -->
+                        </div>
                     </div>
                     <p class="lead mb-5 text-justify">Nascido em Jerônimo Monteiro no ano de 1964, filho de Joana e Nalziro Britto e sobrinho de João Britto Neto, vivi minha infância e cresci no Bairro Vila Britto onde com muita alegria estive ao lado de meus pais e irmãos!<br>
                         Já passei por muitos momentos em minha vida, felizes e outros tristes, porém sempre priorizando minha família e meu Deus.<br>
